WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244380
Style::Scope should use WeakHashSet instead of HashSet of raw pointers
https://bugs.webkit.org/show_bug.cgi?id=244380
Summary
Style::Scope should use WeakHashSet instead of HashSet of raw pointers
Ryosuke Niwa
Reported
2022-08-25 23:55:06 PDT
Don't use raw pointers.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-08-25 23:59:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3694
EWS
Comment 2
2022-08-26 12:43:46 PDT
Committed
253831@main
(ef43d290ade5): <
https://commits.webkit.org/253831@main
> Reviewed commits have been landed. Closing PR #3694 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-26 12:44:14 PDT
<
rdar://problem/99198894
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug