Style::Scope should use WeakHashSet instead of HashSet of raw pointers https://bugs.webkit.org/show_bug.cgi?id=244380

Reviewed by Chris Dumez.

* Source/WebCore/dom/ProcessingInstruction.h:
(WebCore::ProcessingInstruction):

* Source/WebCore/style/StyleScope.cpp:
(WebCore::Style::Scope::addPendingSheet):
(WebCore::Style::Scope::removePendingSheet):
(WebCore::Style::Scope::hasPendingSheets const): Moved from the header.
(WebCore::Style::Scope::hasPendingSheetsBeforeBody const): Ditto.
(WebCore::Style::Scope::hasPendingSheetsInBody const): Ditto.
(WebCore::Style::Scope::hasPendingSheet const):
(WebCore::Style::Scope::hasPendingSheetInBody const):

* Source/WebCore/style/StyleScope.h:
(WebCore::Style::Scope::hasPendingSheets const): Deleted.
(WebCore::Style::Scope::hasPendingSheetsBeforeBody const): Deleted.
(WebCore::Style::Scope::hasPendingSheetsInBody const): Deleted.

Canonical link: https://commits.webkit.org/253831@main